# Lambdifies

./: .gitignore  LICENSE  Lambdifies.cabal  README.md
src/: Main.hs
src/Lambdifies/: Abbreviation.hs  Evaluator.hs  Parser.hs  Type.hs
