name:                Lambdifies
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ailrun/Lambdifies#readme
license:             BSD3
license-file:        LICENSE
author:              Junyoung Clare Jang
maintainer:          jjc9310@gmail.com
copyright:           Copyright, 2016 Junyoung Clare Jang
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Lambdifies
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Lambdifies.Abbreviation,
                       Lambdifies.Evaluator,
                       Lambdifies.Parser,
                       Lambdifies.Type
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       parsec >= 3.1 && < 3.2
